# imclicker-v2

./: Cargo.toml  README.md  build_windows.bat
.github/workflows/: build-windows.yml
src/: config.rs  engine.rs  main.rs
